# accuchek

./: .gitignore  Cargo.toml  README.md  config.toml
accuchek-rs/: BLUETOOTH.md  Cargo.toml  MIGRATION.md  README-TAURI.md  README.md  ROADMAP.md  vite.config.ts
accuchek-rs/examples/: ble_scan.rs
accuchek-rs/src-tauri/: Cargo.toml
accuchek-rs/src-tauri/icons/: README.md
accuchek-rs/src-tauri/src/: lib.rs
accuchek-rs/src-tauri/src/usb/: mod.rs  protocol.rs
accuchek-rs/ui/src/: App.css
apps/ios/AccuChek/AccuChek/: AccuChekApp.swift  ContentView.swift  Info.plist
apps/ios/AccuChek/AccuChek.xcodeproj/: project.pbxproj
apps/ios/AccuChek/AccuChek/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/macos-swift/AccuChek/AccuChek/: AccuChekApp.swift  ContentView.swift
apps/macos-swift/AccuChek/AccuChek.xcodeproj/: project.pbxproj
apps/tauri/: Cargo.toml  entitlements.plist  package.json  tauri.conf.json  vite.config.ts
apps/tauri/src/: lib.rs  main.rs
apps/tauri/ui/: index.html
apps/tauri/ui/src/: App.tsx
