[workspace]
resolver = "2"
members = [
    "apps/tauri",
    "packages/accuchek-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AccuChek Team"]
license = "Unlicense"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
rusb = "0.9"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
