[package]
name = "accuchek-rs"
version = "0.1.0"
edition = "2021"
authors = ["AccuChek Team"]
description = "Rust utility to download blood glucose samples from Roche Accu-Chek Guide devices"
license = "Unlicense"

[dependencies]
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
