[package]
name = "accuchek-app"
version = "0.1.0"
description = "AccuChek blood glucose data manager"
authors = ["AccuChek Team"]
edition = "2021"

[lib]
name = "accuchek_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# USB communication dependencies (from existing accuchek-rs)
rusb = "0.9"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
