[package]
name = "accuchek-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AccuChek blood glucose data manager - Tauri desktop app"

[lib]
name = "accuchek_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true

# Use shared core library
accuchek-core = { path = "../../packages/accuchek-core" }

# Additional dependencies for Tauri app
log.workspace = true
env_logger.workspace = true
